samples/_failures_safe/1761498511_94b5e1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e0df7f7d.c: In function ‘tokenize’:
./samples/SAFE/__tmp_e0df7f7d.c:157:9: error: expected declaration or statement at end of input
  157 |         tokens[token_count].column = col;
      |         ^~~~~~
./samples/SAFE/__tmp_e0df7f7d.c:157:9: error: expected declaration or statement at end of input
